Add evaluate and clear functions to calculator

--- a/index.html
+++ b/index.html
@@ -8,20 +8,39 @@
     <script src="calculator.js" defer> </script>
   </head>
   <body>
-    <button class="clear">clear</button>
-    <button class="operator">÷</button> <br>
-    <button class="number">1</button>
-    <button class="number">2</button>
-    <button class="number">3</button> 
-    <button class="operator">x</button> <br>
-    <button class="number">4</button>
-    <button class="number">5</button>
-    <button class="number">6</button> 
-    <button class="operator">-</button> <br>
-    <button class="number">7</button>
-    <button class="number">8</button>
-    <button class="number">9</button>
-    <button class="operator">+</button> <br>
-    <button class="number">0</button> 
-    <button class="operator">=</button> <br>
+    <input id="display" disabled></div>
+    <div class="buttons"></button>
+        <button id="clear">clear</button>
+        <button class="input"> / </button> <br>
+        <button class="input">1</button>
+        <button class="input">2</button>
+        <button class="input">3</button> 
+        <button class="input"> * </button> <br>
+        <button class="input">4</button>
+        <button class="input">5</button>
+        <button class="input">6</button> 
+        <button class="input"> - </button> <br>
+        <button class="input">7</button>
+        <button class="input">8</button>
+        <button class="input">9</button>
+        <button class="input"> + </button> <br>
+        <button class="input">0</button> 
+        <button id="operate"> = </button> <br>
   </body>
+
+  <!-- <button class="clear">clear</button>
+  <button class="input"> / </button> <br>
+  <button class="input">1</button>
+  <button class="input">2</button>
+  <button class="input">3</button> 
+  <button class="input"> * </button> <br>
+  <button class="input">4</button>
+  <button class="input">5</button>
+  <button class="input">6</button> 
+  <button class="input"> - </button> <br>
+  <button class="input">7</button>
+  <button class="input">8</button>
+  <button class="input">9</button>
+  <button class="input"> + </button> <br>
+  <button class="input">0</button> 
+  <button id="operate"> = </button> <br> -->
